// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarList has 2 car 1`] = `
<div
  className="carList"
>
  <span>
    <div
      className="list"
    >
      <div
        className=""
      >
        test1
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
    </div>
    <div
      className="list"
    >
      <div
        className=""
      >
        test2
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
    </div>
  </span>
</div>
`;

exports[`CarList has 2 car, no select, error1 1`] = `
<div
  className="carList"
>
  <span>
    <div
      className="list"
    >
      <div
        className=""
      >
        test1
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
      <span
        className="counterWrapError"
      >
        <span
          className="counter"
        >
          1
        </span>
      </span>
    </div>
    <div
      className="list"
    >
      <div
        className=""
      >
        test2
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
    </div>
  </span>
</div>
`;

exports[`CarList has 2 car, select test1, error1 1`] = `
<div
  className="carList"
>
  <span>
    <div
      className="list"
    >
      <div
        className="selected"
      >
        test1
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
      <span
        className="counterWrapError"
      >
        <span
          className="counter"
        >
          1
        </span>
      </span>
    </div>
    <div
      className="list"
    >
      <div
        className=""
      >
        test2
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
    </div>
  </span>
</div>
`;

exports[`CarList has 2 car, select test2 1`] = `
<div
  className="carList"
>
  <span>
    <div
      className="list"
    >
      <div
        className=""
      >
        test1
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
    </div>
    <div
      className="list"
    >
      <div
        className="selected"
      >
        test2
        <a
          className="delit"
        >
          ✖
        </a>
      </div>
    </div>
  </span>
</div>
`;
